[package]
name = "btreec"
version = "0.2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/bartlomieju/btreec"
description = "Rust bindings for btree.c"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.98"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
pkg-config = "0.3"